<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEditCelebrity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A34054"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <!-- ImageView để hiển thị hình ảnh đã chọn -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:background="@drawable/border"
        android:src="@drawable/ic_launcher_foreground"
        />

    <!-- Button để chọn hình ảnh -->
    <Button
        android:id="@+id/btnChonhinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A34054"
        android:text="@string/s_choose"
        android:layout_gravity="center"/>

    <!-- Dùng ConstraintLayout để căn chỉnh các TextView và EditText -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/border"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtId"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/edtId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvFullname"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Fullname input -->
        <TextView
            android:id="@+id/tvFullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_fullname"
            app:layout_constraintTop_toBottomOf="@+id/edtId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtHoten"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/edtHoten"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtId"
            app:layout_constraintStart_toEndOf="@id/tvFullname"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Country input -->
        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_country"
            app:layout_constraintTop_toBottomOf="@id/edtHoten"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtQue"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/edtQue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtHoten"
            app:layout_constraintStart_toEndOf="@id/tvFullname"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Born input -->
        <TextView
            android:id="@+id/tvBorn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_born"
            app:layout_constraintTop_toBottomOf="@id/edtQue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtNS"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/edtNS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtQue"
            app:layout_constraintStart_toEndOf="@id/tvFullname"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Type input -->
        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_type"
            app:layout_constraintTop_toBottomOf="@id/edtNS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/spnPhanloai"
            android:paddingEnd="8dp"/>

        <Spinner
            android:id="@+id/spnPhanloai"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/edtNS"
            app:layout_constraintStart_toEndOf="@id/tvFullname"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#A34054"
            android:text="@string/s_exit"
            app:layout_constraintTop_toBottomOf="@+id/spnPhanloai"
            app:layout_constraintEnd_toStartOf="@id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#A34054"
            android:text="@string/s_save"
            app:layout_constraintTop_toBottomOf="@+id/spnPhanloai"
            app:layout_constraintStart_toEndOf="@id/btnExit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>