<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PhanLoai">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A34054"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/border"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/tvMaloai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_typeid"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtMaloai"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/edtMaloai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTenloai"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvTenloai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_typename"
            app:layout_constraintTop_toBottomOf="@+id/edtMaloai"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/edtTenloai"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/edtTenloai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtMaloai"
            app:layout_constraintStart_toEndOf="@id/tvTenloai"
            app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btnBoChon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:backgroundTint="#A34054"
                android:text="@string/s_clear"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnLuu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtTenloai" />
            <Button
                android:id="@+id/btnLuu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:backgroundTint="#A34054"
                android:text="@string/s_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnBoChon"
                app:layout_constraintTop_toBottomOf="@+id/edtTenloai" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/lvDsPhanLoai"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>