<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A34054"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">
        <!-- Layout có viền (Border) -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="20dp">

            <ImageView
                android:id="@+id/ivmain"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:src="@drawable/main"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/appname"/>
            <TextView
                android:id="@+id/appname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#A34054"
                android:textSize="36dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textAlignment="center"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/ivmain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvUsername" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_username"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/appname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/edtUsername" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/appname"
                app:layout_constraintStart_toEndOf="@+id/tvUsername"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_password"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edtUsername"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/edtPassword" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/edtUsername"
                app:layout_constraintStart_toEndOf="@+id/tvUsername"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_login"
                android:backgroundTint="#A34054"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>




</LinearLayout>